# email-router

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: README.md  __init__.py  main.py
app/api/: endpoints.py
app/core/: config.py  gunicorn_conf.py  models.py
app/services/: classifier.py  email_processor.py  gmail_client.py  slack_notifier.py
scripts/: setup_gmail.py
tests/: test_api.py  test_classifier.py
