[project]
name = "email-router"
version = "0.1.0"
description = "An AI-Powered email routing system using NLP"
authors = [
    {name = "Jody Huyck-Jones",email = "68274088+jdhuyck@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "3.11.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "transformers (>=4.55.2,<5.0.0)",
    "torch (>=2.8.0,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "google-api-python-client (>=2.179.0,<3.0.0)",
    "google-cloud-bigquery (>=3.35.1,<4.0.0)",
    "google-auth-httplib2 (>=0.2.0,<0.3.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "google-auth-oauthlib (>=1.2.2,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
]


[tool.poetry]
packages = [{include = "app"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
requests = "^2.32.5"
flake8 = "^7.3.0"
isort = "^6.0.1"
flake8-docstrings = "^1.7.0"
flake8-black = "^0.3.6"
httpx = "^0.28.1"

